--- a/index.html
+++ b/index.html
@@ -2,9 +2,44 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <link rel="Stylesheet" type="text/css" href="reset.css" />
+    <link rel="Stylesheet" type="text/css" href="style.css" />
+    <title>David Richardson</title>
   </head>
   <body>
+    <div id="topBar">
+      <h1>David Richardson</h1>
+      <ul>
+        <li>About Me</li>
+        <li>Programming</li>
+        <li>Projects</li>
+        <li>Contact Me</li>
+      </ul>
+    </div>
+    <div id="header" class="mainDivs">
+      <div id="profileImage"></div>
+      <div id="headerContent" >
+        <h1>David Richardson</h1>
+        <h3>Developer, Aspiring Designer, and Serial Hobbiest.</h3>
+      </div>
+    </div>
 
+    <div id="skew1L" class="skew skewLeft"></div>
+    <div id="aboutMe" class="content mainDivs">
+      <h1>About Me</h1>
+      <div id="aboutMeContent">
+        <div id="aboutMeImages">
+          <div id="aboutMeImage" class="imageDiv"></div>
+          <div id="aboutMeImage2" class="imageDiv"></div>
+          <div id="aboutMeImage3" class="imageDiv"></div>
+        </div>
+        <div id="aboutMeText">
+          <h3>Serial Hobbiest</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <h3>Development History</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
