--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div id="profileImage"></div>
       <div id="headerContent" >
         <h1>David Richardson</h1>
-        <h3>Developer, Aspiring Designer, and Serial Hobbiest.</h3>
+        <h3>Developer, Aspiring Designer, and Serial Hobbyst.</h3>
       </div>
     </div>
 
@@ -34,7 +34,7 @@
           <div id="aboutMeImage3" class="imageDiv"></div>
         </div>
         <div id="aboutMeText">
-          <h3>Serial Hobbiest</h3>
+          <h3>Serial Hobbyst</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           <h3>Development History</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
