--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </ul>
     </div>
     <div id="header" class="mainDivs">
-      <div id="profileImage"></div>
+      <div id="profileImage" class="imageDiv"></div>
       <div id="headerContent" >
         <h1>David Richardson</h1>
         <h3>Developer, Aspiring Designer, and Serial Hobbyst.</h3>
