--- a/index.html
+++ b/index.html
@@ -35,10 +35,62 @@
         </div>
         <div id="aboutMeText">
           <h3>Serial Hobbyst</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p>For as long as I can remember I have followed my dad through many hobbies. When I was a child he was constantly buying and selling things getting in and out of many hobbies, it's who we are. The majority of our hobbies have been RC related, we started out racing RC cars, then we sold that stuff and got into RC planes, then we sold all of that and got into helicopters, that's when I found racing drones. After that I have been hoocked on theese drones, I am more into the freestyle side. I build, configure, fix, fly, and edit my footage for youtube, and I love it all. I've also been in and out of downhill longboarding for a long time, and my family is starting to get into off-road Jeeping.</p>
           <h3>Development History</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p>I have been programming since around 7th grade, I started out programming HTML in a class at school. After that I was hoocked, my method for a while was to just learn as much as possible. I wen't from language to language making as many projects as I could mostly following youtube videos. After a while I decided to start focusing more, I purhcased a MacBook and started using Swift to create iOS apps. I used swift for a couple of years, trying to learn as much about it as I could and making as many projects as possible. After that I decided to experiment with React.js, I have since been working on grasping that.</p>
         </div>
+      </div>
+    </div>
+    <div id="skew2R" class="skew skewRight"></div>
+    <div id="programming" class="content mainDivs">
+      <h1>Programming</h1>
+      <div id="programmingContent">
+        <div id="programmingImage"></div>
+        <div id="programmingText">
+          <h3>Programming Style</h3>
+          <p>To me, style is a verry important part of being a developer. Not only in the style of the GUI, but also in the style of the code. Code is like a work of art, there are a million ways to solve a problem with code and it's up to your personal style to find your solution. I like to make my code as neat and readable as possible, that is one of my first priorities because as a developer in the professional world if you leave a project it needs to be clean for the next developer. In web, I also prioritise responsiveness. In this mobile world we live in it's verry imortant that apps and websites work for everyone.</p>
+          <h3>Languages</h3>
+          <ul>
+            <li>Python</li>
+            <li>HTML5</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>Swift</li>
+            <li>React.js</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div id="skew3L" class="skew skewLeft"></div>
+    <div id="projects" class="content mainDivs">
+      <h1>Projects</h1>
+      <div id="projectsContent">
+        <div id="project1" class="projectItems">
+          <div class="projectImages"></div>
+          <h3>Example Project</h3>
+          <p>This is some sample text about my sample project that tottaly isn't real because who the heck has time to make projects these days I mean come on this is 2018 nobody does that anymore.</p>
+        </div>
+        <div id="project2" class="projectItems">
+          <div class="projectImages"></div>
+          <h3>Example Project</h3>
+          <p>This is some sample text about my sample project that tottaly isn't real because who the heck has time to make projects these days I mean come on this is 2018 nobody does that anymore.</p>
+        </div>
+        <div id="project2" class="projectItems">
+          <div class="projectImages"></div>
+          <h3>Example Project</h3>
+          <p>This is some sample text about my sample project that tottaly isn't real because who the heck has time to make projects these days I mean come on this is 2018 nobody does that anymore.</p>
+        </div>
+      </div>
+    </div>
+    <div id="skew4R" class="skew skewRight"></div>
+    <div id="contact" class="content mainDivs">
+      <h1>I'm All Around You</h1>
+      <div id="contactContent">
+        <div class="contactDivWrapper"><a href="https://github.com/DavidRichardson2019"><div class="contactDiv imageDiv" id="GitLink"></div></a><p>GitHub</p></div>
+        <div class="contactDivWrapper"><a href="https://www.youtube.com/channel/UCjsB8JFeTk01vV01NaFUMXg?view_as=subscriber"><div class="contactDiv imageDiv" id="MainYoutubeLink"></div></a><p>Main Youtube</p></div>
+        <div class="contactDivWrapper"><a href="https://www.youtube.com/channel/UCaprf5plnAIh4oaf1zo7KUA"><div class="contactDiv imageDiv" id="KwadYoutubeLink"></div></a><p>sp00f FPV</p></div>
+        <div class="contactDivWrapper"><a href="https://www.facebook.com/profile.php?id=100004653886281"><div class="contactDiv imageDiv" id="FacebookLink"></div></a><p>Facebook</p></div>
+        <div class="contactDivWrapper"><a href="https://rotorbuilds.com/profile/4094/"><div class="contactDiv imageDiv" id="RotorBuildsLink"></div></a><p>Rotor Builds</p></div>
       </div>
     </div>
   </body>
