--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="Stylesheet" type="text/css" href="reset.css" />
     <link rel="Stylesheet" type="text/css" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>David Richardson</title>
   </head>
   <body>
