--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="Stylesheet" type="text/css" href="reset.css" />
     <link rel="Stylesheet" type="text/css" href="newStyle.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gaegu|Righteous">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>David Richardson</title>
   </head>
@@ -11,7 +12,7 @@
     <div id="header">
       <div id="profileImage" class="imageDiv"></div>
       <div id="headerContent" >
-        <h1>David Richardson</h1>
+        <h1 style="font-family: 'Righteous', cursive;" >David Richardson</h1>
         <h3>Developer, Aspiring Designer, and Serial Hobbyst.</h3>
       </div>
     </div>
