--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="header">
       <div id="profileImage" class="imageDiv"></div>
       <div id="headerContent" >
-        <h1 style="font-family: 'Righteous', cursive;" >David Richardson</h1>
+        <h1>David Richardson</h1>
         <h3>Developer, Aspiring Designer, and Serial Hobbyst.</h3>
       </div>
     </div>
@@ -77,6 +77,20 @@
           <span>
           <h3>David's Greenhouse</h3>
           <p>This is a website I made displaying a project for school, an enviormently friendly tiny house. I made this website to display my tiny house at the State Museum Eco Science Fair.</p>
+        </span>
+        </div>
+        <div id="project4" class="projectItems">
+          <a href="./connect4.html"><div class="projectImages"></div></a>
+          <span>
+          <h3>Connect 4</h3>
+          <p>This is a project I made with Kenzie Academy. It's a simple game of two player Connect 4!</p>
+        </span>
+        </div>
+        <div id="project5" class="projectItems">
+          <a href="./TTT.html"><div class="projectImages"></div></a>
+          <span>
+          <h3>Tic Tac Toe</h3>
+          <p>This is a project I made with Kenzie Academy. It's a simple game of two player Tic Tac Toe!</p>
         </span>
         </div>
       </div>
