--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
     <title>David Richardson</title>
   </head>
   <body>
+    <div class="images">
+      <div class="column">
+        <img src="./images/image1.JPG" alt="">
+        <img src="./images/image2.JPG" alt="">
+        <img src="./images/image6.JPG" alt="">
+      </div>
+      <div class="column">
+        <img src="./images/image5.JPG" alt="">
+        <img src="./images/image3.JPG" alt="">
+        <img src="./images/image7.JPG" alt="">
+      </div>
+      <div class="column">
+        <img src="./images/image9.JPG" alt="">
+        <img src="./images/image4.JPG" alt="">
+        <img src="./images/image11.JPG" alt="">
+      </div>
+    </div>
     <div id="header">
       <div id="profileImage" class="imageDiv"></div>
       <div id="headerContent" >
