Deletign stupid stuff

--- a/index.html
+++ b/index.html
@@ -96,20 +96,20 @@
           <p>This is a website I made displaying a project for school, an enviormently friendly tiny house. I made this website to display my tiny house at the State Museum Eco Science Fair.</p>
         </span>
         </div>
-        <div id="project4" class="projectItems">
+        <!---<div id="project4" class="projectItems">
           <a href="./connect4.html"><div class="projectImages"></div></a>
           <span>
           <h3>Connect 4</h3>
           <p>This is a project I made with Kenzie Academy. It's a simple game of two player Connect 4!</p>
         </span>
-        </div>
-        <div id="project5" class="projectItems">
+      </div>--->
+        <!---<div id="project5" class="projectItems">
           <a href="./TTT.html"><div class="projectImages"></div></a>
           <span>
           <h3>Tic Tac Toe</h3>
           <p>This is a project I made with Kenzie Academy. It's a simple game of two player Tic Tac Toe!</p>
         </span>
-        </div>
+      </div>--->
       </div>
     </div>
     <div id="skew4R" class="skew skewRight"></div>
